--- a/LOGIN/login.html
+++ b/LOGIN/login.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="login.css">
-    <title>Universe</title>
+    <title>AutoChoice</title>
 </head>
 <body>
-    <img src="logos/UniverseVermelho.png" style="width: 20vw; margin: 10px; padding: 0;">
+    <img src="../MAIN/images/blogo.png" style="width: 12vw; min-width: 150px; margin: 10px; padding: 0;">
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
-		<form action="#">
+		<form action="../MAIN/html/index.html">
 			<h1>Cadastre-se</h1>
 			<div class="social-container">
 				<img src="logos/facebook-app-symbol.png" class="social"><i class="fab fa-facebook-f"></i></img>
@@ -25,7 +25,7 @@
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
-		<form action="#">
+		<form action="../MAIN/html/index.html">
 			<h1>Login</h1>
 			<div class="social-container">
 				<img src="logos/facebook-app-symbol.png" class="social"><i class="fab fa-facebook-f"></i></img>
