--- a/MAIN/html/profile.html
+++ b/MAIN/html/profile.html
@@ -12,7 +12,9 @@
         <img src="../images/wlogo.png" class="logo">
     </header>
     <main>
-
+        <h1 style="text-align: center; margin-top: 70px;">OPS!</h1>
+        <h2 style="text-align: center; margin-top: 10px;">Ainda estamos trabalhando aqui!</h2>
+        <h1 class="TEMPORARY" onclick="history.go(-1)" >&larr;</h1>
     </main>
     <footer>
 
