--- a/MAIN/html/index.html
+++ b/MAIN/html/index.html
@@ -50,8 +50,8 @@
                     <img src="../images/house.png" "><a href="index.html">Home</a><br> 
                 </div>
                 <div class="config">
-                    <img src="../images/profile1.png"><a href="profile.html">Perfil</a><br>
-                    <img src="../images/house.png" "><a href="home.html">Home</a><br> 
+                    <img src="../images/settings.png"><a href="index.html">Configurações</a><br>
+                    <img src="../images/info.png" "><a href="index.html">Info</a><br> 
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
         
         
     </main>
-    <footer>
+    <footer id="footer">
         <h5>Todos os diretos reservados - AutoChoice</h5>
     </footer>
 </body>
