--- a/MAIN/html/index.html
+++ b/MAIN/html/index.html
@@ -46,12 +46,12 @@
             <img src="../images/arrowleft.png" class="arrowClose" onclick="closePopUp()">
             <div class="geral">
                 <div class="pageFunc">
-                    <img src="../images/profile1.png"><a href="profile.html">Perfil</a><br>
-                    <img src="../images/house.png" "><a href="index.html">Home</a><br> 
+                    <img src="../images/profile1.png"><a href="profile.html" style="top: 60px">Perfil</a><br>
+                    <img src="../images/house.png" "><a href="index.html" style="top: 100px">Home</a><br> 
                 </div>
                 <div class="config">
-                    <img src="../images/settings.png"><a href="index.html">Configurações</a><br>
-                    <img src="../images/info.png" "><a href="index.html">Info</a><br> 
+                    <img src="../images/settings.png"><a href="settings.html" style="bottom: 115px">Configurações</a><br>
+                    <img src="../images/info.png" "><a href="info.html" style="bottom: 75px">Info</a><br> 
                 </div>
             </div>
         </div>
