--- a/MAIN/html/index.html
+++ b/MAIN/html/index.html
@@ -47,7 +47,8 @@
             <div class="geral">
                 <div class="pageFunc">
                     <img src="../images/profile1.png"><a href="profile.html" style="top: 60px">Perfil</a><br>
-                    <img src="../images/house.png" "><a href="index.html" style="top: 100px">Home</a><br> 
+                    <img src="../images/house.png" "><a href="index.html" style="top: 100px">Home</a><br>
+                    <img src="../images/heart.png" "><a href="index.html" style="top: 135px">Favoritos</a><br> 
                 </div>
                 <div class="config">
                     <img src="../images/settings.png"><a href="settings.html" style="bottom: 115px">Configurações</a><br>
